objects/footprint__Footprint_Line_Item_Detail__c.object
<CustomObject>
    <fields>
        <fullName>footprint__Foot_Print_Line_Item_Detail_rt__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Footprint Record Type</label>
        <referenceTo>footprint__Foot_Print_RecordType__c</referenceTo>
        <relationshipLabel>Footprint Record Type Detail</relationshipLabel>
        <relationshipName>Footprint_Line_Item_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>footprint__Footprint_Line_Item_Detail_Pop_OnGlo_per__c</fullName>
        <formula>IF( footprint__Footprint_Line_Item__r.footprint__Footprint_Line_Items_Object_Analysis__r.footprint__FootPrint_Records__c &gt; 0 ,  footprint__Footprint_Line_Item_Detail_Pop_On__c/footprint__Footprint_Line_Item__r.footprint__Footprint_Line_Items_Object_Analysis__r.footprint__FootPrint_Records__c,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Populated On Global (%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>footprint__Footprint_Line_Item_Detail_Pop_OnText__c</fullName>
        <formula>TEXT(footprint__Footprint_Line_Item_Detail_Pop_On__c) +' / '+ TEXT(footprint__Foot_Print_Line_Item_Detail_rt__r.footprint__Foot_Print_RecordType_Records__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Populated On</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>footprint__Footprint_Line_Item_Detail_Pop_On__c</fullName>
        <label>Populated On</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>footprint__Footprint_Line_Item_Detail_Pop_On_per__c</fullName>
        <formula>IF( footprint__Foot_Print_Line_Item_Detail_rt__r.footprint__Foot_Print_RecordType_Records__c &gt;0,(footprint__Footprint_Line_Item_Detail_Pop_On__c / footprint__Foot_Print_Line_Item_Detail_rt__r.footprint__Foot_Print_RecordType_Records__c ) ,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Populated On (%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>footprint__Footprint_Line_Item__c</fullName>
        <label>Field</label>
        <referenceTo>footprint__Footprint_Line_Item__c</referenceTo>
        <relationshipLabel>Footprint Field Record Type</relationshipLabel>
        <relationshipName>Footprint_Line_Item_Details</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Field Record Type Detail</label>
    <nameField>
        <label>Record Type</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Footprint Line Item Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>